force-app/main/default/objects/ApprovalDependency__c/ApprovalDependency__c.object-meta.xml
<CustomObject>
    <description>Will be used to capture dependencies for care type approved with dependencies.</description>
    <label>Approval Dependency</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Approval Dependency</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Dependencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>