force-app/main/default/objects/ApprovalDependency__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipName>Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>