force-app/main/default/objects/ApprovalDependency__c/fields/ApprovedProvider__c.field-meta.xml
<CustomField>
    <fullName>ApprovedProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approval Dependencies</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>