force-app/main/default/objects/ApprovalDependency__c/fields/CareType__c.field-meta.xml
<CustomField>
    <fullName>CareType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Type</label>
    <referenceTo>Care_Type__c</referenceTo>
    <relationshipLabel>Approval Dependencies</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>