force-app/main/default/objects/ApprovalDependency__c/fields/DateMet__c.field-meta.xml
<CustomField>
    <fullName>DateMet__c</fullName>
    <description>When the dependency was fulfilled.</description>
    <label>Date Met</label>
    <type>Date</type>
</CustomField>