force-app/main/default/objects/ApprovalDependency__c/fields/DateofDelegateApproval__c.field-meta.xml
<CustomField>
    <fullName>DateofDelegateApproval__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Delegate Approval</label>
    <type>Date</type>
</CustomField>