force-app/main/default/objects/ApprovalDependency__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <description>Approving a care type on the grounds that a dependency is fulfilled, applicant is not approved until dependency is fulfilled.</description>
    <label>Dependencies</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>