force-app/main/default/objects/ApprovalDependency__c/fields/DependenciesDueDate__c.field-meta.xml
<CustomField>
    <fullName>DependenciesDueDate__c</fullName>
    <label>Dependencies Due Date</label>
    <type>Date</type>
</CustomField>