force-app/main/default/objects/ApprovalDependency__c/fields/HavetheDependenciesBeenMet__c.field-meta.xml
<CustomField>
    <fullName>HavetheDependenciesBeenMet__c</fullName>
    <description>Recording when the Dependency has been met so that the care type can be Approved</description>
    <formula>IF(ISBLANK(DateMet__c) , false, true)</formula>
    <label>Have the Dependencies Been Met?</label>
    <type>Checkbox</type>
</CustomField>