force-app/main/default/objects/ApprovalDependency__c/recordTypes/Dependency.recordType-meta.xml
<RecordType>
    <fullName>Dependency</fullName>
    <active>true</active>
    <label>Dependency</label>
</RecordType>