force-app/main/default/objects/ApprovalDependency__c/recordTypes/Locked.recordType-meta.xml
<RecordType>
    <fullName>Locked</fullName>
    <active>true</active>
    <description>To lock Approval Dependencies Case after  &apos;Yes&apos; has been selected from the &apos;Have the Dependencies Been Met?&apos;</description>
    <label>Locked</label>
</RecordType>