force-app/main/default/objects/ApprovalDependency__c/validationRules/Date_Met_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Met_Check</fullName>
    <active>true</active>
    <description>When the dependency was fulfilled.</description>
    <errorConditionFormula>AND(
NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
HavetheDependenciesBeenMet__c,
ISNULL(DateMet__c)
)</errorConditionFormula>
    <errorMessage>&apos;Date Met&apos; must be populated before &apos;Have the Dependencies Been Met&apos; is populated.</errorMessage>
</ValidationRule>