force-app/main/default/objects/ApprovalDependency__c/validationRules/Obsolete_care_type_application.validationRule-meta.xml
<ValidationRule>
    <fullName>Obsolete_care_type_application</fullName>
    <active>true</active>
    <description>The care type record will be locked when care type application is obsolete.</description>
    <errorConditionFormula>AND(Application__r.RecordType.DeveloperName = &apos;Caretype_Application_Closed_locked_Inactive&apos;,
NOT( $Setup.BypassTriggers__c.BypassFlow__c ) )</errorConditionFormula>
    <errorMessage>The care type application is obsolete, you cannot make any changes.</errorMessage>
</ValidationRule>